--- a/vagrant.yml
+++ b/vagrant.yml
@@ -14,30 +14,30 @@
           - mariadb_root_pass is defined
 
   roles:
-#    - { role: OULibraries.centos7, tags: ["centos"] }
-#    - { role: OULibraries.mariadb, tags: ["mariadb"] }
-#    - { role: OULibraries.fcrepo3, tags: ["fcrepo3"] }
+    - { role: OULibraries.centos7, tags: ["centos"] }
+    - { role: OULibraries.mariadb, tags: ["mariadb"] }
+    - { role: OULibraries.fcrepo3, tags: ["fcrepo3"] }
     - { role: OULibraries.drupal, tags: ["drupal"] }
 
-#  tasks:
-#    - name: Enable selinux for testing
-#      selinux:
-#        state: enforcing
-#        policy: targeted
-#      when: environment_name != "vagrant"
-#    - name: Disable selinux for vagrant dev
-#      selinux:
-#        state: permissive
-#        policy: targeted
-#      when: environment_name == "vagrant"
-#
-#    - name: Add apache user to vagrant group
-#      user:
-#        name: apache
-#        append: yes
-#        groups: vagrant
-#    - name: Add vagrant user to apache group
-#      user:
-#        name: vagrant
-#        append: yes
-#        groups: apache
+  tasks:
+    - name: Enable selinux for testing
+      selinux:
+        state: enforcing
+        policy: targeted
+      when: environment_name != "vagrant"
+    - name: Disable selinux for vagrant dev
+      selinux:
+        state: permissive
+        policy: targeted
+      when: environment_name == "vagrant"
+
+    - name: Add apache user to vagrant group
+      user:
+        name: apache
+        append: yes
+        groups: vagrant
+    - name: Add vagrant user to apache group
+      user:
+        name: vagrant
+        append: yes
+        groups: apache
