--- a/requirements.yml
+++ b/requirements.yml
@@ -3,9 +3,21 @@
   version: v2016-06-29.0
   name: OULibraries.centos7
 
+- src: https://github.com/OULibraries/ansible-role-apache2
+  version: v2016-04-25.1
+  name: OULibraries.apache2
+
 - src: https://github.com/OULibraries/ansible-role-mariadb
   version: v2016-04-08.0
   name: OULibraries.mariadb
+
+- src: https://github.com/OULibraries/ansible-role-d7
+  version: v2016-07-29.0
+  name: OULibraries.d7
+
+- src: https://github.com/OULibraries/ansible-role-ngrok
+  version: v2016-04-08.0
+  name: OULibraries.ngrok
 
 - src: https://github.com/OULibraries/ansible-role-users
   version: v2016-06-10.0
@@ -13,3 +25,6 @@
 
 - src: https://github.com/OULibraries/ansible-role-fcrepo3
   name: OULibraries.fcrepo3
+
+- src: https://github.com/OULibraries/ansible-role-d7-islandora
+  name: OULibraries.d7-islandora
