--- a/vagrant.yml
+++ b/vagrant.yml
@@ -13,14 +13,14 @@
         that:
           - mariadb_root_pass is defined
   roles:
-    - OULibraries.centos7
-    - OULibraries.mariadb
-    - OULibraries.fcrepo3
-    - OULibraries.apache2
-    - OULibraries.d7
-    - OULibraries.d7-islandora
-    - OULibraries.ngrok
-    - OULibraries.users
+    - { role: OULibraries.centos7, tags: ["centos7"] }
+    - { role: OULibraries.mariadb, tags: ["mariadb"] }
+    - { role: OULibraries.fcrepo3, tags: ["fcrepo3"] }
+    - { role: OULibraries.apache2, tags: ["apache2"] }
+    - { role: OULibraries.d7, tags: ["d7"] }
+    - { role: OULibraries.d7-islandora, tags: ["islandora"] }
+    - { role: OULibraries.ngrok, tags: ["ngrok"] }
+    - { role: OULibraries.users, tags: ["users"] }
 
   tasks:
     - name: Enable selinux for testing
