Changed back to fix issue for Tao

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,7 @@
 ---
-- src: https://github.com/OULibraries/ansible-role-centos7
-  version: v2016-06-29.0
-  name: OULibraries.centos7
+#- src: https://github.com/OULibraries/ansible-role-centos7
+#  version: v2016-06-29.0
+#  name: OULibraries.centos7
 
 - src: https://github.com/OULibraries/ansible-role-apache2
   version: v2016-04-25.1
